Fix strange overflowing behaviour in XUITextInput (#3196)
Inputs inside XUITextInput weren't being correctly constrained to their container. This removes the bug by simplifying the internals of XUITextInput a bit. The downside of this is that rightelement can no longer be used on autocompleters with wrapping pills

--- a/src/sass/components/_autocompleter.scss
+++ b/src/sass/components/_autocompleter.scss
@@ -100,7 +100,13 @@
 }
 
 .#{$ns}-autocompleter--pill {
+	flex: 0 0 auto;
 	margin-bottom: 2px;
 	margin-right: 5px;
 	margin-top: 2px;
+}
+
+.#{$ns}-autocompleter--textinput {
+	flex-shrink: 0;
+	max-width: 100%;
 }
